--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage",
+    "test": "jest",
     "build": "webpack",
-    "start": "webpack serve --open",
-    "deploy": "gh-pages -d dist"
+    "start": "webpack serve --open"
   },
   "repository": {
     "type": "git",
@@ -19,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/Ochiengsteven/Module2-Capstone/issues"
   },
-  "homepage": "https://Ochiengsteven.github.io/Module2-Capstone",
+  "homepage": "https://github.com/Ochiengsteven/Module2-Capstone#readme",
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.22.5",
     "babel-eslint": "^10.1.0",
@@ -36,7 +35,6 @@
   },
   "dependencies": {
     "css-loader": "^6.8.1",
-    "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.3",
     "jest-environment-jsdom": "^29.6.2",
     "style-loader": "^3.3.3",
